tests/ui/associated-type-bounds/suggest-contraining-assoc-type-because-of-assoc-const.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-contraining-assoc-type-because-of-assoc-const.rs:13:21
   |
LL |     const N: C::M = 4u8;
   |                     ^^^ expected associated type, found `u8`
   |
   = note: expected associated type `<C as O>::M`
                         found type `u8`
   = note: the associated type `<C as O>::M` is defined as `u8` in the implementation, but the generic bound `C` hides this definition
help: consider constraining the associated type `<C as O>::M` to `u8`
   |
LL | impl<C: O<M = u8>> U<C> for u16 {
   |          ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
